Exercício complementado e biblioteca de ordenação atualizada

--- a/ordenacao-vetores/.classpath
+++ b/ordenacao-vetores/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="library/Ordenacao.jar"/>
+	<classpathentry kind="lib" path="library/Ordering.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
