--- a/ordenacao-vetores/sorting-algorithms/.project
+++ b/ordenacao-vetores/sorting-algorithms/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AlgoritmosDeOrdenacao</name>
+	<name>SortingAlgorithms</name>
 	<comment></comment>
 	<projects>
 	</projects>
