--- a/ordenacao-vetores/tempo-gasto-com-metodos-sort/.classpath
+++ b/ordenacao-vetores/tempo-gasto-com-metodos-sort/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="library/Ordering.jar"/>
+	<classpathentry kind="lib" path="library/Sort.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
